GUI updates, reward cap fork at block 74000

--- a/src/makefile.unix
+++ b/src/makefile.unix
@@ -137,7 +137,8 @@ OBJS= \
     obj/scrypt-x86_64.o \
     obj/smessage.o \
     obj/stealth.o \
-    obj/blake.o
+    obj/blake.o \
+    obj/qdex.o
 
 
 all: quotientd
